--- a/src/Example.MyMongo/Example.MyMongo.csproj
+++ b/src/Example.MyMongo/Example.MyMongo.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
   </ItemGroup>
 
 
