--- a/src/Example.MyMongo/appsettings.json
+++ b/src/Example.MyMongo/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProductsConnectionString": "mongodb://localhost:27017"
+    "ProductsConnectionString": "mongodb://mongo-db:27017/ProductsDb?maxConnectionIdleTime=30"
   }
 }
