--- a/src/Example.MyMongo/appsettings.json
+++ b/src/Example.MyMongo/appsettings.json
@@ -1,10 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.ColoredConsole", "Serilog.Sinks.File" ],
+    "Enrich": [ "WithMachineName", "WithProcessId", "WithThreadId", "WithExceptionDetails" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "Properties": {
+      "Application": "Example.MyMongo",
+      "Environment": "Development"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
